Fix wssue with image loading on mobile (kinda hacky, need to look into later)

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
 
 /* topnav */
 
-@media(max-width:540px){
+@media(max-width:560px){
   .nav-pills {
       visibility: hidden;
   }
