--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -3,24 +3,16 @@
 
 .circle-img {
     border-radius: 50%;
-    border-width: 1px;
-    border-color:white;
-    border-style: outset;
     max-height: 100%;
     max-width: 100%;
 }
 
 .circle-container {
-  height: 40%;
+  min-height: 200px;
+  max-height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.circle-expanded {
-    text-align: left;
-    margin-left: 50%;
-    width: 100%;
 }
 
 .no-padding {
